--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -10,6 +10,7 @@
     <welcome-file>default.htm</welcome-file>
   </welcome-file-list>
   
+  <!-- Controller역할을 하는 @webservlet을 대신한다. -->
   <servlet>
   	<servlet-name>test2</servlet-name>
   	<servlet-class>study.t0419.Test2</servlet-class>
@@ -18,4 +19,16 @@
   	<servlet-name>test2</servlet-name>
   	<url-pattern>/t2</url-pattern>
   </servlet-mapping>
+  
+  <!-- Filter처리를 위한 설정 -->
+<!--
+  <filter>
+  	<filter-name>encodingFilter</filter-name>
+  	<filter-class>filter.EncodingFilter</filter-class>
+  </filter>
+  <filter-mapping>
+  	<filter-name>encodingFilter</filter-name>
+  	<url-pattern>/*</url-pattern>
+  </filter-mapping>
+-->
 </web-app>
